--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <link rel="icon" type="image/svg+xml" href="assets/favicon.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="robots" content="index, follow">
     <meta name="keywords" content="HTML, CSS, JavaScript, Vanilla.js, ToDoList">
     <meta name="description" content="Vanilla JavaScript Project: ToDoList">
     <meta name="author" content="fa-bs.github.io">
