--- a/index.html
+++ b/index.html
@@ -28,7 +28,18 @@
     </head>
 
     <body>
-        <h1>ToDoList</h1>
+
+
+        <a style="display: flex; align-items: center; justify-content: center; gap: 10px;
+        color: #c4c4c4; text-decoration: none;""
+            href="
+            https://github.com/fa-bs/vanilla-to-do-list"
+            target="_blank">
+            <h1>ToDoList</h1>
+            <i style="font-size: 2.3rem;"
+                class="bi bi-github"></i>
+        </a>
+
 
         <header>
             <input class="input"
