--- a/index.html
+++ b/index.html
@@ -40,18 +40,19 @@
                 class="bi bi-github"></i>
         </a>
 
-
         <header>
             <input class="input"
                 type="text"
                 placeholder="Type a Task Here..."
                 autofocus>
             <button onclick="addTask()"
+                title="tip: you can use Enter to add."
                 class="btn-add">
                 add
                 <i class="bi bi-plus-circle-fill"></i>
             </button>
             <button onclick="saveList()"
+                title="tip: turn on autosave and all changes will be saved."
                 class="btn-save">
                 save
                 <i class="bi bi-save2-fill"></i>
